--- a/index.html
+++ b/index.html
@@ -17,14 +17,8 @@
     </div>
     <ul id="myUl">
       <li class="checked">Task 1</li>
-      <li>Task 2</li>
-      <li>Task 3</li>
-      <li>Task 4</li>
-      <li>Task 5</li>
-      <li>Task 6</li>
-      <li>Task 7</li>
     </ul>
 
-    <script src="app.js"></script>
+    <script src="app.js" async></script>
   </body>
 </html>
