--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div id="myDiv" class="header">
-      <h1>ToDo App List</h1>
+      <h1>ToDo List</h1>
          <div class="enterTask">
          <input type="text" id="myInput" placeholder="Enter your title">
-         <span class="addBtn" onclick="newElement()">Add</span>
+         <span class="addBtn" onclick="newElement()">+</span>
          </div>
     </div>
     <ul id="myUl">
