--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       <h1>ToDo List</h1>
          <div class="enterTask">
          <input type="text" id="myInput" placeholder="Enter your title">
-         <span class="addBtn" onclick="newElement()">+</span>
          </div>
     </div>
     <ul id="myUl">
     </ul>
-
+     <span class="addBtn" onclick="newElement()">Add Task</span>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
