--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
          <div class="enterTask">
          <input type="text" id="myInput" placeholder="Enter your title">
          </div>
+         <span class="addBtn" onclick="newElement()">+</span>
     </div>
     <ul id="myUl">
     </ul>
-     <span class="addBtn" onclick="newElement()">Add Task</span>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="app.js"></script>
   </body>
