--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="myDiv" class="header">
-      <h1>ToDo List</h1>
+      <h1>TODO LIST</h1>
          <div class="enterTask">
          <input type="text" id="myInput" placeholder="Enter your title">
          </div>
