--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          <div class="enterTask">
            <input type="text" id="myInput" placeholder="Enter your title">
          </div>
-         <span class="addBtn" onclick="newElement()">ADD</span>
+         <span class="addBtn" onclick="newElement()">+</span>
     </div>
     <ul id="myUl">
     </ul>
